<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whitess"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/ivItemImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/itemimage"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tvItemCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/rs_34_0"
                android:textColor="@color/purple_700"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/woman_t_shirt"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>