<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whites">

        <ImageView
            android:id="@+id/ivNewImg"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/imageviewproduct"
            android:scaleType="centerCrop"
            android:src="@drawable/shirt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="@font/amethysta"
            android:padding="6dp"
            android:text="@string/newtext"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivNewImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvNewProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/amethysta"
            android:text="@string/product_name"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivNewImg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/tvNewProductName"
            app:layout_constraintStart_toStartOf="@+id/tvNewProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvNewProductName">

            <TextView
                android:id="@+id/tvRupees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/price_rs"
                android:textColor="@color/newproduct"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvNewPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/_90"
                android:textColor="@color/newproduct"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvRupees"
                app:layout_constraintStart_toEndOf="@+id/tvRupees"
                app:layout_constraintTop_toTopOf="@+id/tvRupees" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>